Add & fix apis